# tigergraph-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: copilot_setup.md  crewai_setup.md  langgraph_setup.md
docs/chatbot_langgraph_examples/: load_data_local.txt  load_data_s3.txt  onboarding.txt
examples/chatbot_crewai/: chat_flow.py  chat_session_manager.py  main.py
examples/chatbot_crewai/crews/: __init__.py
examples/chatbot_crewai/crews/data_loading_crew/: __init__.py  data_loading_crew.py
examples/chatbot_crewai/crews/data_loading_crew/config/: agents.yaml  tasks.yaml
examples/chatbot_crewai/crews/planner_crew/: __init__.py  planner_crew.py
examples/chatbot_crewai/crews/planner_crew/config/: agents.yaml  tasks.yaml
examples/chatbot_crewai/crews/schema_crew/: __init__.py  schema_crew.py
examples/chatbot_crewai/crews/tool_executor_crew/: __init__.py  tool_executor_crew.py
examples/chatbot_langgraph/: __init__.py  main.py  prompts.py  state.py  workflow.py
tests/: __init__.py  test_connection_manager.py  test_connection_tools.py  test_data_tools.py  test_datasource_tools.py  test_discovery_tools.py  test_edge_tools.py  test_gsql_tools.py  test_node_tools.py  test_query_tools.py  test_response_formatter.py  test_schema_tools.py  test_statistics_tools.py  test_vector_tools.py  test_workflow_mcp.py
tigergraph-mcp-recipe/recipe/: meta.yaml
tigergraph_mcp/: __init__.py  connection_manager.py  response_formatter.py  server.py  tool_metadata.py  tool_names.py
tigergraph_mcp/tools/: __init__.py  datasource_tools.py  query_tools.py  schema_tools.py  statistics_tools.py  tool_registry.py  vector_tools.py
(+4 files in other folders)
